crates/review-buddy/tests/snapshots/frames__frame_1a_three_panes_no_color_160x40.snap
---
source: crates/review-buddy/tests/frames.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ───────────────────────────────────────────────────────╮
│▌ ● All               7 ││  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus                                           │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                                                         │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                                                   │
│    github.com          ││  ● Raise muted text contrast in the ligh… 5h ││                                                                                    │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    github.com          ││                                              ││                                                                                    │
│  ● platform          2 ││  Worth a look · 2                            ││  Overview   Files 3   Checks 6   Conversation 3                                    │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││ ────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ Adds a menu bar along the top and a Menu type that tracks the selected item.       │
│    gitlab.com          ││  ● Tidy zsh startup                       1d ││                                                                                    │
│                        ││  GH dotfiles#31 · smorris · yours            ││ • Menu::select_next and Menu::select_prev move the highlight                       │
│  Show  s to change     ││                                              ││ • Menu::activate returns the action for the highlighted item                       │
│  [x] reviewing         ││  Can wait · 1                                ││ • The bar itself is a plain Line, so it picks up the active theme                  │
│  [x] assigned          ││  · Clarify the install steps              3d ││                                                                                    │
│  [x] authored          ││  GL notes!12 · kai · approved by you         ││ Reviewers                                Checks                                    │
│  [ ] drafts            ││                                              ││ ◌ smorris requested                      ● 2 passing  ◐ 1 running                  │
│  [ ] noise             ││  ▸ Noise · 2 bot updates · ⏎ to expand       ││ ✎ jo commented                           ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled   │
│                        ││                                              ││                                                                                    │
│                        ││  ── That's everything.                       ││ Latest comment                                                                     │
│                        ││  7 in this view.                             ││ jo · 5h ago · menubar.rs:7                                                         │
│                        ││                                              ││ These three lines could be one join. Is the intermediate Vec doing anything for    │
│                        ││                                              ││ us?                                                                                │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││ Your review  not started                                                           │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:148 D " Liminal HQ"
1:0 D "╭ sources ───────────────╮"
1:26 B "╭ queue ───────────────────────────────────────╮"
1:74 D "╭ liminal-hq/review-buddy#214 ───────────────────────────────────────────────────────╮"
2:0 D "│"
2:1 DR "▌"
2:3 BR "● All"
2:8 R ""
2:23 DR "7"
2:25 D "│"
2:26 B "│"
2:29 B "Waiting on you"
2:43 D " · 2"
2:73 B "│"
2:74 D "│"
2:76 B "Add a menu bar and keyboard-driven menus"
2:159 D "│"
3:0 D "│"
3:1 R ""
3:5 DR "every source"
3:17 R ""
3:25 D "│"
3:26 B "│"
3:27 BR "▌"
3:29 R "◐"
3:31 BR "Add a menu bar and keyboard-driven me…"
3:69 R ""
3:70 DR "2h"
3:73 B "│"
3:74 D "│"
3:79 D " wants"
3:95 D " →"
3:159 D "│"
4:0 D "│"
4:23 D "3 │"
4:26 B "│"
4:27 BR "▌"
4:29 R "GH review-buddy#214"
4:48 DR " ·"
4:51 R "ada"
4:54 DR " · review requested"
4:73 B "│"
4:74 D "│"
4:80 B "−1"
4:82 D " · 3 files · opened 3d ago"
4:159 D "│"
5:0 D "│"
5:5 D "github.com"
5:25 D "│"
5:26 B "│"
5:70 D "5h"
5:73 B "│"
5:74 D "│"
5:159 D "│"
6:0 D "│"
6:23 D "1 │"
6:26 B "│"
6:48 D " ·"
6:53 D " · approved by you"
6:73 B "│"
6:74 D "│"
6:76 B "a"
6:87 B "x"
6:106 B "c"
6:117 B "⏎"
6:125 B "m"
6:159 D "│"
7:0 D "│"
7:5 D "github.com"
7:25 D "│"
7:26 B "│"
7:73 B "│"
7:74 D "│"
7:159 D "│"
8:0 D "│"
8:23 D "2 │"
8:26 B "│"
8:29 B "Worth a look"
8:41 D " · 2"
8:73 B "│"
8:74 D "│"
8:76 BR " Overview"
8:87 D " Files 3"
8:97 D " Checks 6"
8:108 D " Conversation 3"
8:159 D "│"
9:0 D "│"
9:5 D "gitlab.platform.ex…"
9:25 D "│"
9:26 B "│"
9:29 B "✕"
9:70 D "7h"
9:73 B "│"
9:74 D "│"
9:76 D "──────────────────────────────────────────────────────────────────────────────────"
9:159 D "│"
10:0 D "│"
10:23 D "1 │"
10:26 B "│"
10:41 D " ·"
10:49 D " · you're mentioned"
10:73 B "│"
10:74 D "│"
10:159 D "│"
11:0 D "│"
11:5 D "gitlab.com"
11:25 D "│"
11:26 B "│"
11:70 D "1d"
11:73 B "│"
11:74 D "│"
11:159 D "│"
12:0 D "│"
12:25 D "│"
12:26 B "│"
12:43 D " ·"
12:53 D " · yours"
12:73 B "│"
12:74 D "│"
12:159 D "│"
13:0 D "│"
13:3 BD "Show"
13:7 D "  s to change"
13:25 D "│"
13:26 B "│"
13:73 B "│"
13:74 D "│"
13:159 D "│"
14:0 D "│"
14:25 D "│"
14:26 B "│"
14:29 B "Can wait"
14:37 D " · 1"
14:73 B "│"
14:74 D "│"
14:159 D "│"
15:0 D "│"
15:25 D "│"
15:26 B "│"
15:29 D "·"
15:70 D "3d"
15:73 B "│"
15:74 D "│"
15:159 D "│"
16:0 D "│"
16:25 D "│"
16:26 B "│"
16:40 D " ·"
16:46 D " · approved by you"
16:73 B "│"
16:74 D "│"
16:159 D "│"
17:0 D "│"
17:3 D "[ ] drafts"
17:25 D "│"
17:26 B "│"
17:73 B "│"
17:74 D "│"
17:76 D "◌"
17:85 D " requested"
17:159 D "│"
18:0 D "│"
18:3 D "[ ] noise"
18:25 D "│"
18:26 B "│"
18:29 D "▸ Noise · 2 bot updates · ⏎ to expand"
18:73 B "│"
18:74 D "│"
18:80 D " commented"
18:117 D "○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled"
18:159 D "│"
19:0 D "│"
19:25 D "│"
19:26 B "│"
19:73 B "│"
19:74 D "│"
19:159 D "│"
20:0 D "│"
20:25 D "│"
20:26 B "│"
20:29 D "── That's everything."
20:73 B "│"
20:74 D "│"
20:76 BD "Latest comment"
20:159 D "│"
21:0 D "│"
21:25 D "│"
21:26 B "│"
21:29 D "7 in this view."
21:73 B "│"
21:74 D "│"
21:78 D " · 5h ago · menubar.rs:7"
21:159 D "│"
22:0 D "│"
22:25 D "│"
22:26 B "│"
22:73 B "│"
22:74 D "│"
22:159 D "│"
23:0 D "│"
23:25 D "│"
23:26 B "│"
23:73 B "│"
23:74 D "│"
23:159 D "│"
24:0 D "│"
24:25 D "│"
24:26 B "│"
24:73 B "│"
24:74 D "│"
24:159 D "│"
25:0 D "│"
25:25 D "│"
25:26 B "│"
25:73 B "│"
25:74 D "│"
25:76 D "Your review"
25:159 D "│"
26:0 D "│"
26:25 D "│"
26:26 B "│"
26:73 B "│"
26:74 D "│"
26:159 D "│"
27:0 D "│"
27:25 D "│"
27:26 B "│"
27:73 B "│"
27:74 D "│"
27:159 D "│"
28:0 D "│"
28:25 D "│"
28:26 B "│"
28:73 B "│"
28:74 D "│"
28:159 D "│"
29:0 D "│"
29:25 D "│"
29:26 B "│"
29:73 B "│"
29:74 D "│"
29:159 D "│"
30:0 D "│"
30:25 D "│"
30:26 B "│"
30:73 B "│"
30:74 D "│"
30:159 D "│"
31:0 D "│"
31:25 D "│"
31:26 B "│"
31:73 B "│"
31:74 D "│"
31:159 D "│"
32:0 D "│"
32:25 D "│"
32:26 B "│"
32:73 B "│"
32:74 D "│"
32:159 D "│"
33:0 D "│"
33:25 D "│"
33:26 B "│"
33:73 B "│"
33:74 D "│"
33:159 D "│"
34:0 D "│"
34:25 D "│"
34:26 B "│"
34:73 B "│"
34:74 D "│"
34:159 D "│"
35:0 D "│"
35:25 D "│"
35:26 B "│"
35:73 B "│"
35:74 D "│"
35:159 D "│"
36:0 D "│"
36:25 D "│"
36:26 B "│"
36:73 B "│"
36:74 D "│"
36:159 D "│"
37:0 D "│"
37:25 D "│"
37:26 B "│"
37:73 B "│"
37:74 D "│"
37:159 D "│"
38:0 D "╰────────────────────────╯"
38:26 B "╰──────────────────────────────────────────────╯"
38:74 D "╰────────────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " diff"
39:9 B "o"
39:10 D " open"
39:17 B "y"
39:18 D " copy"
39:25 B "s"
39:26 D " show filters"
39:41 B "?"
39:42 D " help"
39:49 B "T"
39:50 D " theme"
39:58 B "q"
39:59 D " quit"
