crates/review-buddy/tests/snapshots/frames__frame_1d_diff_afterglow_dark_100x30.snap
---
source: crates/review-buddy/tests/frames.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                       Afterglow Dark
 GH liminal-hq/review-buddy#214 · liminal-hq · Add a menu bar and keyboard-driven menus
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││         13 +     selected: usize,                              │
│  · src/ui/menubar.rs      +8 −0││         14 +     open: bool,                                   │
│  · src/ui/mod.rs          +2 −0││    13   15   }                                                 │
│                                ││    14   16                                                     │
│                                ││    15   17   impl Menu {                                       │
│                                ││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {    │
│                                ││              @@ -34,6 +36,24 @@ impl Menu {                    │
│                                ││    34   36       pub fn len(&self) -> usize {                  │
│                                ││    35   37           self.items.len()                          │
│                                ││    36   38       }                                             │
│                                ││         39 +                                                   │
│                                ││         40 +     pub fn select_next(&mut self) {               │
│                                ││         41 +         if self.items.is_empty() {                │
│                                ││         42 +             return;                               │
│                                ││         43 +         }                                         │
│                                ││›        44 +         self.selected = (self.selected + 1) % sel…│
│                                ││              ╭─ thread · line 44 ─────────────────────────────╮│
│                                ││              │ jo · 1d                                        ││
│ Your review · pending ─────────││              │ Should this wrap round to the first item? Most ││
│1 suggestion · 0 comments       ││              │ menus I use stop at the end.                   ││
│0 of 3 files viewed             ││              │ ada · 20h                                      ││
│Your review: not started        ││              │ I went with wrapping so a held key never gets  ││
│  menus.rs:51 Fewer branches th…││              │ stuck. Happy to make it configurable if you'd  ││
│a approve · c comment           ││              │ rather.                                        ││
│x request changes · R review    ││              ╰────────────────────────────────────── r reply ─╯│
╰────────────────────────────────╯╰ hunk 2 of 3 · file 1 of 3 ─────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  r reply  a approve  R submit a review  o open
